--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -25,7 +25,7 @@
     {% include "main/includes/projects.html" %}
 
     {# Testimonials Section #}
-    {% include "main/includes/testimonials.html" %}
+  <!--   { include "main/includes/testimonials.html" %} -->
 
     {# Blog Posts Section #}
     {% include "main/includes/recent_blog_posts.html" %}
