feat: update some files

--- a/templates/main/includes/projects_filter_main.html
+++ b/templates/main/includes/projects_filter_main.html
@@ -6,7 +6,7 @@
             <li
                     data-filter="*"
                     class="{% if not selected_category %}filter-active{% endif %}">
-                Tümü
+                TÜMÜ
             </li>
 
             {# Kategoriler #}
