feat: update some files

--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -9,11 +9,11 @@
   <div class="page-title dark-background"
        style="background-image: url({{ STATIC_URL }}assets/img/page-title-bg.jpg);">
     <div class="container position-relative">
-      <h1>Projeler</h1>
+      <h1>Projelerimiz</h1>
       <nav class="breadcrumbs">
         <ol>
           <li><a href="{% url 'main:home' %}">Anasayfa</a></li>
-          <li class="current">Projeler</li>
+          <li class="current">Projelerimiz</li>
         </ol>
       </nav>
     </div>
