--- a/templates/main/includes/header.html
+++ b/templates/main/includes/header.html
@@ -13,33 +13,36 @@
                        class="{% if request.resolver_match.url_name == 'home' %}active{% endif %}">
                     Anasayfa
                 </a></li>
-                <li><a href="about.html">Hakkımızda</a></li>
-                <li><a href="services.html">Hizmetlerimiz</a></li>
-                <li><a href="{% url 'main:projects_main' %}"
+                <li><a href="{% url 'main:about' %}">Hakkımızda</a></li>
+                <li><a href="{% url 'main:services' %}">Hizmetlerimiz</a></li>
+                <li><a href="{% url 'main:projects' %}"
                        class="{% if request.resolver_match.url_name == 'projects_name' %}active{% endif %}">
                     Projelerimiz
                 </a></li>
+                <li><a href="{% url 'main:contact' %}">İletişim</a></li>
+
+
                 <li><a href="blog.html">Blog</a></li>
-          <!--      <li class="dropdown"><a href="#"><span>Yaptığımız İşler</span> <i
-                        class="bi bi-chevron-down toggle-dropdown"></i></a>
-                    <ul>
-                        <li><a href="#">Dropdown 1</a></li>
-                        <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                            <ul>
-                                <li><a href="#">Deep Dropdown 1</a></li>
-                                <li><a href="#">Deep Dropdown 2</a></li>
-                                <li><a href="#">Deep Dropdown 3</a></li>
-                                <li><a href="#">Deep Dropdown 4</a></li>
-                                <li><a href="#">Deep Dropdown 5</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Dropdown 2</a></li>
-                        <li><a href="#">Dropdown 3</a></li>
-                        <li><a href="#">Dropdown 4</a></li>
-                    </ul>
-                </li>
-            -->
+                <!--      <li class="dropdown"><a href="#"><span>Yaptığımız İşler</span> <i
+                              class="bi bi-chevron-down toggle-dropdown"></i></a>
+                          <ul>
+                              <li><a href="#">Dropdown 1</a></li>
+                              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
+                                      class="bi bi-chevron-down toggle-dropdown"></i></a>
+                                  <ul>
+                                      <li><a href="#">Deep Dropdown 1</a></li>
+                                      <li><a href="#">Deep Dropdown 2</a></li>
+                                      <li><a href="#">Deep Dropdown 3</a></li>
+                                      <li><a href="#">Deep Dropdown 4</a></li>
+                                      <li><a href="#">Deep Dropdown 5</a></li>
+                                  </ul>
+                              </li>
+                              <li><a href="#">Dropdown 2</a></li>
+                              <li><a href="#">Dropdown 3</a></li>
+                              <li><a href="#">Dropdown 4</a></li>
+                          </ul>
+                      </li>
+                  -->
                 <li><a href="contact.html">İletişim</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
