--- a/templates/main/includes/projects.html
+++ b/templates/main/includes/projects.html
@@ -3,7 +3,7 @@
 <section id="projects" class="projects section">
 
   <div class="container section-title" data-aos="fade-up">
-    <h2>Projelerimiz</h2>
+    <h2>Yaptığımız İşler</h2>
     <p>Atölyemizden seçtiğimiz bazı çalışmalar.</p>
   </div>
 
