--- a/templates/main/includes/head.html
+++ b/templates/main/includes/head.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
 
     <!-- Favicons -->
-    <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
+    <link href="{% static 'assets/img/logo/logo.png' %}" rel="icon">
     <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
     <!-- Fonts -->
