feat: update some files

--- a/templates/main/includes/footer.html
+++ b/templates/main/includes/footer.html
@@ -74,8 +74,13 @@
         <p>© <span>Yasal Uyarı</span> <strong class="px-1 sitename">DRN AHŞAP ATÖLYESİ</strong>
             <span>Tüm hakları saklıdır.</span></p>
         <div class="credits">
-            <a href="https://bootstrapmade.com/">BootstrapMade</a> desteği ile bilgerota tarafından hazırlanmıştır.
+            <a href="https://bootstrapmade.com/">BootstrapMade</a> desteği ile
+            <span class="bilgerota">
+    <span class="bilge">Bilge</span><span class="rota">Rota</span>
+  </span> tarafından hazırlanmıştır.
         </div>
+
+
     </div>
 
 </footer>
