feat: update some files

--- a/templates/main/includes/footer.html
+++ b/templates/main/includes/footer.html
@@ -15,8 +15,8 @@
                 </div>
                 <div class="social-links d-flex mt-4">
                     <a href="#"><i class="bi bi-twitter-x"></i></a>
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.facebook.com/drnahsap"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/drnahsapatolyesi/"><i class="bi bi-instagram"></i></a>
                     <a href="#"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
