--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -57,11 +57,13 @@
                 <!-- Map -->
                 <div class="col-lg-6">
                     <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1str!2str!4v1676961268712!5m2!1str!2str"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12539.91829213486!2d29.1504562!3d40.9355111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0!2sZümrütevler%20Mahallesi%20Canay%20Sokak%20No%3A12%20Maltepe%2FİSTANBUL!5e0!3m2!1str!2str!4v1700000000000!5m2!1str!2str"
                             style="border:0; width:100%; height:400px;"
                             allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
+
 
                 <!-- Form -->
                 <div class="col-lg-6">
