--- a/templates/main/includes/footer.html
+++ b/templates/main/includes/footer.html
@@ -2,14 +2,16 @@
 <footer id="footer" class="footer dark-background">
 
     <div class="container footer-top">
-        <div class="row gy-4">
-            <div class="col-lg-4 col-md-6 footer-about">
+        <div class="row gy-4 justify-content-center">
+
+            <!-- DRN AHŞAP ATÖLYESİ -->
+            <div class="col-lg-4 col-md-6 footer-about text-start">
                 <a href="{% url 'main:home' %}" class="logo d-flex align-items-center">
                     <span class="sitename">DRN AHŞAP ATÖLYESİ</span>
                 </a>
                 <div class="footer-contact pt-3">
                     <p>Zümrütevler Mahallesi Canay Sokak</p>
-                    <p> No:12 Maltepe/İSTANBUL</p>
+                    <p>No:12 Maltepe/İSTANBUL</p>
                     <p class="mt-3"><strong>Telefon:</strong> <span>+90 (532) 372 23 56</span></p>
                     <p><strong>Email:</strong> <span>omuryatkin@hotmail.com</span></p>
                 </div>
@@ -21,52 +23,28 @@
                 </div>
             </div>
 
-            <div class="col-lg-2 col-md-3 footer-links">
+            <!-- Kullanışlı Linkler -->
+            <div class="col-lg-2 col-md-3 footer-links text-start">
                 <h4>Kullanışlı Linkler</h4>
                 <ul>
                     <li><a href="{% url 'main:home' %}">Anasayfa</a></li>
                     <li><a href="{% url 'main:about' %}">Hakkımızda</a></li>
                     <li><a href="{% url 'main:services' %}">Hizmetlerimiz</a></li>
-                    <!-- <li><a href="{ url 'main:terms' %}">Terms of service</a></li> -->
                     <li><a href="{% url 'main:privacy' %}">Mülkiyet Hakları</a></li>
                 </ul>
             </div>
 
-            <div class="col-lg-2 col-md-3 footer-links">
+            <!-- Hizmetlerimiz -->
+            <div class="col-lg-2 col-md-3 footer-links text-start">
                 <h4>Hizmetlerimiz</h4>
                 <ul>
-                    <li><a href="#">Ölçü & Tasarım</a></li>
-                    <li><a href="#">Üretim & Montaj</a></li>
+                    <li><a href="#">Ölçü &amp; Tasarım</a></li>
+                    <li><a href="#">Üretim &amp; Montaj</a></li>
                     <li><a href="#">Yüzey İşlemleri</a></li>
-                    <li><a href="#">Garanti & Bakım</a></li>
-
+                    <li><a href="#">Garanti &amp; Bakım</a></li>
                 </ul>
             </div>
 
-            <!--
-            <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Hic solutasetp</h4>
-                <ul>
-                    <li><a href="#">Molestiae accusamus iure</a></li>
-                    <li><a href="#">Excepturi dignissimos</a></li>
-                    <li><a href="#">Suscipit distinctio</a></li>
-                    <li><a href="#">Dilecta</a></li>
-                    <li><a href="#">Sit quas consectetur</a></li>
-                </ul>
-            </div>
-
-            <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Nobis illum</h4>
-                <ul>
-                    <li><a href="#">Ipsam</a></li>
-                    <li><a href="#">Laudantium dolorum</a></li>
-                    <li><a href="#">Dinera</a></li>
-                    <li><a href="#">Trodelas</a></li>
-                    <li><a href="#">Flexo</a></li>
-                </ul>
-            </div>
-
--->
         </div>
     </div>
 
@@ -75,12 +53,9 @@
             <span>Tüm hakları saklıdır.</span></p>
         <div class="credits">
             <a href="https://bootstrapmade.com/">BootstrapMade</a> desteği ile
-            <span class="bilgerota">
-    <span class="bilge">Bilge</span><span class="rota">Rota</span>
-  </span> tarafından hazırlanmıştır.
+            <span class="bilgerota"><span class="bilge">Bilge</span><span class="rota">Rota</span></span>
+            tarafından hazırlanmıştır.
         </div>
-
-
     </div>
 
 </footer>
