feat: update some files

--- a/templates/main/includes/hero.html
+++ b/templates/main/includes/hero.html
@@ -9,7 +9,7 @@
                     <h2>DRN AHŞAP ATÖLYESİ HOŞ GELDİNİZ!</h2>
 
                     <p>Ölçünüze, tarzınıza, bütçenize özel tasarım ve üretim.</p>
-                    <a href="#get-started" class="btn-get-started">Hadi taleplerini ilet</a>
+                    <a href="#get-started" class="btn-get-started">Talepleriniz için tıklayınız</a>
                 </div>
             </div>
         </div>
