--- a/templates/main/includes/footer.html
+++ b/templates/main/includes/footer.html
@@ -30,7 +30,10 @@
                     <li><a href="{% url 'main:home' %}">Anasayfa</a></li>
                     <li><a href="{% url 'main:about' %}">Hakkımızda</a></li>
                     <li><a href="{% url 'main:services' %}">Hizmetlerimiz</a></li>
-                    <li><a href="{% url 'main:privacy' %}">Mülkiyet Hakları</a></li>
+                    <li><a href="{% url 'main:contact' %}">İletişim</a></li>
+                    <li><a href="{% url 'main:ownership' %}">Mülkiyet Hakları</a></li>
+                    <li><a href="{% url 'main:privacy' %}">Gizlilik ve Veri Koruma</a></li>
+
                 </ul>
             </div>
 
