feat: update some files

--- a/templates/backoffice/login.html
+++ b/templates/backoffice/login.html
@@ -35,7 +35,7 @@
                         {% csrf_token %}
                         <div class="row gy-3">
                             <div class="col-12">
-                                <input type="email" name="email" class="form-control form-control-lg"
+                                <input type="email" name="username" class="form-control form-control-lg"
                                        placeholder="E-posta" required>
                             </div>
                             <div class="col-12">
