--- a/templates/main/includes/footer.html
+++ b/templates/main/includes/footer.html
@@ -56,7 +56,7 @@
             <span>Tüm hakları saklıdır.</span></p>
         <div class="credits">
             <a href="https://bootstrapmade.com/">BootstrapMade</a> desteği ile
-            <span class="bilgerota"><span class="bilge">Bilge</span><span class="rota">Rota</span></span>
+            <span class="bilgerota">BilgeRota</span>
             tarafından hazırlanmıştır.
         </div>
     </div>
