--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html lang="tr">
 {% include 'main/includes/head.html' %}
-<body class="{% block body_class %}index-page{% endblock %}">
+<body class="{% block body_class %}index-page{% endblock %} d-flex flex-column min-vh-100">
 {% include 'main/includes/header.html' %}
-<main class="main">
+
+<main class="main flex-grow-1">
     {% block content %}{% endblock %}
 </main>
 {% include 'main/includes/footer.html' %}
