--- a/templates/main/includes/header.html
+++ b/templates/main/includes/header.html
@@ -15,12 +15,12 @@
                 </a></li>
                 <li><a href="{% url 'main:about' %}">Hakkımızda</a></li>
                 <li><a href="{% url 'main:services' %}">Hizmetlerimiz</a></li>
-                <li><a href="{% url 'main:projects' %}"
-                       class="{% if request.resolver_match.url_name == 'projects_name' %}active{% endif %}">
+                <!--     <li><a href="{ url 'main:projects' %}"
+                       class="{ if request.resolver_match.url_name == 'projects_name' %}active{ endif %}">
                     Projelerimiz
                 </a></li>
 
-                <!--
+
                                 <li><a href="blog.html">Blog</a></li>
                                     <li class="dropdown"><a href="#"><span>Yaptığımız İşler</span> <i
                                               class="bi bi-chevron-down toggle-dropdown"></i></a>
