--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -22,7 +22,7 @@
     { include "main/includes/features.html" %} -->
 
     {# Projects Section #}
-    {% include "main/includes/projects.html" %}
+  <!--   { include "main/includes/projects.html" %} -->
 
     {# Testimonials Section #}
   <!--   { include "main/includes/testimonials.html" %} -->
